Redid..well..just about everything.

--- a/old_templates/homepage.html
+++ b/old_templates/homepage.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "soko/base.html" %}
 
 {% block title %}Will Van Wazer | What is a developer-journalist, anyway?{% endblock %}
 
